--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -4,7 +4,9 @@
         "c:\\Users\\Connor N\\Downloads\\GitHubApiClient-v0.0.7.jar",
         "c:\\Users\\Connor N\\Downloads\\GitSubprocessClient-v0.0.12.jar",
         "c:\\Users\\Tannon\\Downloads\\GitHubApiClient-v0.0.7.jar",
-        "c:\\Users\\Tannon\\Downloads\\GitSubprocessClient-v0.0.12.jar"
+        "c:\\Users\\Tannon\\Downloads\\GitSubprocessClient-v0.0.12.jar",
+        "/Users/omarfofana/Downloads/GitHubApiClient-v0.0.7.jar",
+        "/Users/omarfofana/Downloads/GitSubprocessClient-v0.0.12.jar"
     ],
     "java.debug.settings.onBuildFailureProceed": true
 }
